--- a/public/home.html
+++ b/public/home.html
@@ -147,7 +147,7 @@
     <div class="logo">Cold Chain Monitoring System</div>
     <nav>
       <ul class="nav-links">
-        <li><a href="/">HOME</a></li>
+        <li><a href="/home.html">HOME</a></li>
         <li><a href="/index.html">ADD SENSOR DATA</a></li>
         <li><a href="/create-shipment.html">ADD SHIPMENT</a></li>
         <li><a href="/dashboard">DASHBOARD</a></li>
